# echo-intellect

./: .dockerignore  .gitignore  Makefile  README.md  README.zh-CN.md  clear_all_data.py  config.yaml  main.py  pyproject.toml  start.ps1
app/: echoIntellect.py  main.py
app/api/: dependencies.py  health_routes.py  import_endpoints.py  query_routes.py  routes.py
app/api/models/: requests.py  responses.py
app/api/v1/: chat.py  health.py  ingestion.py  models.py  query.py  router.py  speech.py
app/chains/: query_processing_chain.py  retrieval_chain.py
app/components/filters/: token_relevance_filter.py
app/components/mergers/: rrf_merger.py
app/core/: app.py  container.py  init.py
app/document_loaders/: custom_loaders.py  document_processor.py
app/embeddings/: embedding_models.py
app/ingestion/: __init__.py  chunker.py  indexer.py  readers.py  service.py
app/llms/: embeddings.py  reranker.py  speech.py
app/memory/: conversation_memory.py
app/middleware/: cors.py
app/models/: data_models.py
app/prompts/: rag_prompts.py
app/rag/: hybrid_retriever.py  memory.py  parallel_retriever.py  prompts.py  query_expander.py  query_optimizer.py  query_processor.py  rrf.py  service.py
app/services/: data_import_service.py
app/stores/: mongo.py  qdrant.py
app/utils/: langchain_utils.py  logger_config.py
app/vectorstores/: milvus_store.py  mongo_metadata.py  postgres_vector.py
config/: config.py  log.py  settings.py
deploy/: Dockerfile  docker-compose.yaml
tests/: test_chains.py  test_chat_api.py  test_models.py  test_prompts.py  test_service.py  test_settings.py
web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
web/deploy/: nginx.conf
web/src/: App.tsx  index.css
web/src/components/: Chat.tsx  (+1 more)
(+38 files in other folders)
