[project]
name = "echo-intellect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jsonschema>=4.24.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.69",
    "langchain-deepseek>=0.1.3",
    "langchain-text-splitters>=0.3.8",
    "meilisearch>=0.36.0",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pymilvus>=2.5.12",
    "pymongo>=4.13.2",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "rank-bm25>=0.2.2",
    "redis>=6.2.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.35.0",
]
