[project]
name = "echo-intellect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jsonschema>=4.24.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.69",
    "langchain-openai>=0.3.0",
    "langchain-text-splitters>=0.3.8",
    "numpy>=2.3.1",
    "openai>=1.96.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.13.2",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.17.1",
    "redis>=6.2.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
